[gd_scene load_steps=12 format=3 uid="uid://dsr0v11ggewrq"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_ja5kq"]
[ext_resource type="Script" path="res://scripts/PlayerManager.gd" id="1_xoi36"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="2_ckvlo"]
[ext_resource type="PackedScene" uid="uid://dkmpdmo4w8tpt" path="res://prefab/Ball.tscn" id="2_qbsg0"]
[ext_resource type="PackedScene" uid="uid://bp4p74n22uoph" path="res://prefab/Hoop.tscn" id="3_4jcto"]
[ext_resource type="PackedScene" uid="uid://bmvfbq5jqf42l" path="res://prefab/Court.tscn" id="4_mhnap"]
[ext_resource type="PackedScene" uid="uid://din6tp3j6rrfm" path="res://prefab/Player.tscn" id="4_yn740"]
[ext_resource type="Script" path="res://scripts/CPUManager.gd" id="7_ijyjr"]
[ext_resource type="Script" path="res://scripts/Scoreboard.gd" id="8_phybn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iu75f"]
radius = 386.0
height = 774.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b25lt"]
a = Vector2(-600, 2.08165e-12)
b = Vector2(600, 2.08165e-12)

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ja5kq")
ball_scene = ExtResource("2_qbsg0")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)
limit_smoothed = true
editor_draw_limits = true
script = ExtResource("2_ckvlo")

[node name="PlayerManager" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("1_xoi36")
player_scene = ExtResource("4_yn740")

[node name="CPUManager" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 1)
script = ExtResource("7_ijyjr")
player_scene = ExtResource("4_yn740")

[node name="Hoop1" parent="." instance=ExtResource("3_4jcto")]
position = Vector2(2.08165e-12, -160)

[node name="PointDetector" type="Area2D" parent="Hoop1"]
position = Vector2(-2.08165e-12, 160)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hoop1/PointDetector"]
position = Vector2(-1, -86)
shape = SubResource("CapsuleShape2D_iu75f")

[node name="Hoop2" parent="." instance=ExtResource("3_4jcto")]
position = Vector2(0, 997)

[node name="Ground" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("SegmentShape2D_b25lt")
one_way_collision = true

[node name="Court" parent="." instance=ExtResource("4_mhnap")]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scoreboard" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_phybn")

[node name="PlayerScore" type="Label" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
offset_right = 66.0
offset_bottom = 26.0
text = "Player: 0"

[node name="CPUScore" type="Label" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
offset_top = 24.0
offset_right = 50.0
offset_bottom = 50.0
text = "CPU: 0"

[connection signal="area_entered" from="Hoop1/PointDetector" to="Hoop1" method="_on_point_detector_area_entered"]
[connection signal="area_exited" from="Hoop1/PointDetector" to="Hoop1" method="_on_point_detector_area_exited"]
